[package]
name = "kinnector-warden"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync", "process", "fs", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
nix = { version = "0.27", features = ["user"] }
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"
reqwest = { version = "0.11", features = ["json"] }
dashmap = "5.5"
